--- a/MapReducer.Functions/package.json
+++ b/MapReducer.Functions/package.json
@@ -11,6 +11,7 @@
     "function": "npm run build && func host start"
   },
   "dependencies": {
+    "@types/node": "^14.11.8",
     "lodash": "^4.17.20"
   },
   "devDependencies": {
