--- a/MapReducer.Functions/package.json
+++ b/MapReducer.Functions/package.json
@@ -11,7 +11,10 @@
     "function": "npm run build && func host start"
   },
   "dependencies": {
+    "@azure/cosmos": "^3.9.2",
+    "@types/lodash": "^4.14.161",
     "@types/node": "^14.11.8",
+    "dotenv": "^8.2.0",
     "lodash": "^4.17.20"
   },
   "devDependencies": {
