--- a/MapReducer.Functions/package.json
+++ b/MapReducer.Functions/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@azure/cosmos": "^3.9.2",
+    "@azure/storage-blob": "^12.2.1",
     "@types/lodash": "^4.14.161",
     "@types/node": "^14.11.8",
     "dotenv": "^8.2.0",
